# AdvanceComputerGraphic

./: CMakeLists.txt  Camera.cpp  Camera.h  Config.cpp  Hittable.h  HittableList.cpp  HittableList.h  Light.h  Material.cpp  Material.h  Ray.h  Scene.cpp  Scene.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h  Utility.h  main.cpp
